# Gnosis-Learning

KV Cache/kv reuse/: vllm_demo.py
Nsight Systems/simple GPU graph/: README.md  torch_demo.py  torch_profile.nsys-rep
Nsight Systems/vLLM + Nsight/: README.md  benchmark_facebook_opt-1.3b_20260129_145126.json  benchmark_facebook_opt-125m_20260129_145636.json  benchmark_facebook_opt-125m_trivia_20260205_151347.json  benchmark_facebook_opt-125m_trivia_20260205_153444.json  benchmark_facebook_opt-125m_trivia_20260206_091825.json  benchmark_facebook_opt-125m_trivia_20260206_092021.json  benchmark_facebook_opt-125m_trivia_20260206_092205.json  benchmark_facebook_opt-125m_trivia_20260206_092510.json  benchmark_facebook_opt-125m_trivia_20260206_093803.json  benchmark_facebook_opt-125m_trivia_20260206_094651.json  (+18 more)
kv-cache/Test/: README.md  code_explanation.md  experiment_1.md  history.md  instructions.md  phase1_experiment.py  phase1_server.sh  phase2_experiment.py  phase3.md  phase3a_experiment.py  phase3a_server.sh  phase3b_experiment.py  phase3b_trivia_experiment.py  phase_2.md  plot_results.py  pyproject.toml
kv-cache/Test/prompts/: prompts_phase3b_a256_b512.csv  prompts_phase3b_a384_b384.csv  prompts_phase3b_a512_b256.csv  prompts_phase3b_trivia_a256_b512.csv  prompts_phase3b_trivia_a384_b384.csv  prompts_phase3b_trivia_a512_b256.csv
kv-cache/Test/results/: results_phase3b_a256_b512.csv  results_phase3b_a384_b384.csv  results_phase3b_a512_b256.csv  results_phase3b_trivia_a256_b512.csv  results_phase3b_trivia_a384_b384.csv  results_phase3b_trivia_a512_b256.csv
