[project]
name = "kv-cache-test"
version = "0.1.0"
description = "Experiment 1: Prefix Cache Invalidation Cost"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.6.3.post1",
    "aiohttp>=3.9.1",
    "torch>=2.4.0",
    "transformers>=4.44.0,<5.0.0",
    "matplotlib",
    "numpy",
    "llama-cpp-python",
]
